[package]
name = "dbt-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
# LSP and async runtime
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["full"] }

# SQL and templating
sqlparser = "0.35.0"
askama = "0.12.0"  # Advanced Jinja2-like templating
tree-sitter = "0.22.0"
tree-sitter-sql = "0.0.2"
tree-sitter-jinja2 = "0.0.1"

# Project parsing and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
toml = "0.5.8"

# Filesystem and path handling
walkdir = "2.4.0"
path-clean = "1.0.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.11.1"

[build-dependencies]
tree-sitter-cli = "0.20.0"
